# KOTOBA-TRAVEL

./: .gitignore  .markdownlint.json  LICENSE  README.md  build_release.py  kotoba_travel.iss  pyproject.toml  requirements.txt  run.py  setup_linux.sh
.github/workflows/: build-release.yml
src/: main.py
src/asset/data/: culture.json  explore.json  food.json  grammatica.json  history.json  kanji.json  museums.json  sillabari.json  vocabolario.json
src/core/: achievements.py  app_paths.py  app_state.py  auth_service.py  compat.py  content_store.py  db_manager.py  lockout_store.py  profile_factory.py  profile_integrity.py  profile_store.py  progress_service.py  security.py  settings.py  validators.py
src/ui/: achievements_view.py  culture_view.py  dashboard_view.py  food_view.py  history_view.py  login_view.py  places_view.py  settings_view.py  splash_view.py  stats_view.py
src/ui/achievements/: achievements_view.py
src/ui/auth/: login_view.py
src/ui/components/: loader.py  masthead.py  stage.py
src/ui/explore/: culture_view.py  food_view.py  (+2 more)
tests/: test_achievements_catalog.py  test_achievements_view.py  test_auth_service.py  test_dashboard_view.py  test_db_manager.py  test_dojo_behavior.py  test_flet_compat.py  test_food_view.py  test_loader.py  test_lockout_store.py  test_login_view.py  test_profile_factory.py  test_profile_integrity.py  test_profile_store.py  test_progress_service.py  test_project_config.py  test_quiz_and_progress.py  test_quiz_utils.py  test_router.py  test_security.py  test_study_hub.py  test_validators.py  test_view_smoke.py
(+20 files in other folders)
